Updated portfolio, carousel next

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,11 @@
               <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
+				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				<li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
+				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
-				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
-				    <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
-                <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
-		        </ul>
+		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
@@ -90,6 +90,162 @@
       </div>
     </div>
 	
+	    <div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+	      <div class ="col-md-5">
+			<div class="thumbnail">
+                <img src="images/hypetrain_page.png">
+            </div>
+	      </div>
+		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
+			<p>Role: Project Lead/Designer/Programmer</p>
+			<p>Developed In: Unity2D (C#)</p>
+			<p>Take to the tracks in this high-speed action platformer, looting 
+			a moving train in an attempt to pull off the biggest heist the Wild 
+			West has ever seen!</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
+				<p>Project HYPETRAIN is a game currently being developed by 
+				the student startup studio I founded, Ursa Major Games. Whenever
+				we get a break from school, jobs, and the general craziness
+				of college, we pour our hearts into this game. Project HYPETRAIN
+				has the biggest team, as well as development cycle, I have ever
+				experienced. The result? A ton of leadership, design, and Unity 
+				experience, along with a badass train heist game that'll be sure
+				to get the HYPE flowing through your veins! Try it out!</p>
+		  </div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-12 text-center">
+			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
+			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
+	      </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
+	<div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/krab_title.png"></div>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-6" id="gametext" style="padding-top:20px">
+			<p>Role: Level Designer/Scrum Master</p>
+			<p>Tools: <img src="images/Unity_Logo.png"><img src="images/Blender_Logo.png"></p>
+			<p>Klash with your friends in this 3D combat arena and compete
+			for the title of "Top Krab"! </p>
+		  </div>
+		  <div class ="col-md-4">
+			<div class="thumbnail">
+                <img src="images/krab_screen.png">
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-4">
+			<div class="thumbnail">
+                <img src="images/krab_model.png">
+            </div>
+	      </div>
+		  <div class ="col-md-6" id="gametext" style="padding-top:10px">
+				<p>Krab Klashers was a game developed in a software 
+				engineering class at UCSC, utilizing a Scrum development 
+				methodolgy. Our goal for the project was to familiarize 
+				ourselves with 3D and multiplayer game production, as it 
+				is a foreign field for all of us. We chose to keep the
+				game's mechanics relatively simple, yet entertaining. By
+				keeping the scope under control, the 6 of us were able to 
+				gain a ton of experience with several areas of game design
+				we had yet to explore.</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-12 text-center">
+			<a href="downloads/KrabKlashers(Win).zip" class="btn btn-custom">Download(Windows)</a>
+			<a href="downloads/KrabKlashers(Mac).zip" class="btn btn-custom">Download(Mac)</a>
+	      </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
+	<div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/meow_title.png"></div>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-5" id="gametext" style="padding-top:30px">
+			<p>Role: Lead Designer/Writer</p>
+			<p>Developed In: Unity2D (C#)</p>
+			<p>Two lovestruck cats are about to enter a long-distance
+			relationship, and the pesky phone bills aren't cheap. Earn
+			money through a series of odd jobs to try and make things 
+			work in this brief, yet heart-wrenching story-game.</p>
+		  </div>
+	      <div class ="col-md-5">
+			<div class="thumbnail" style="padding-top:20px">
+                <img src="images/meow_screen.png">
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <a href="http://globalgamejam.org/2015/games/what-do-we-do-meow-1"><img src="images/GGJ_logo.png"></a>
+            </div>
+	      </div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:50px">
+				<p>What Do We Do Meow was developed at the 2015 Global
+				Game Jam. It was the first jam for all 5 of us, but I'm pretty
+				proud of what we came up with in a meager 48 hours. I learned
+		        a lot about the importance of planning/storyboarding, as well
+				as how to effectively create under pressue. It was an 
+				unforgettable experience, and I'll definitely be attending many 
+				more jams in the future!</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-12 text-center">
+			<a href="downloads/wdwd-meow(Win).zip" class="btn btn-custom">Download (Windows)</a>
+			<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>
+	      </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
 	<div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
@@ -139,108 +295,6 @@
 		  <div class ="col-md-12 text-center">
 			<a href="downloads/Dreamlock.zip" class="btn btn-custom">Download</a>
 		  </div>
-	    </div>
-		
-	   </div>
-      </div>
-    </div>
-	
-	<div class = "neighborhood-guides">
-        <div class="container">
-            <div class ="row">
-				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
-        <div class ="row">
-		  <div class ="col-md-1"></div>
-	      <div class ="col-md-5">
-			<div class="thumbnail">
-                <img src="images/hypetrain_page.png">
-            </div>
-	      </div>
-		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
-			<p>Role: Project Lead/Designer/Programmer</p>
-			<p>Developed In: Unity (C#)</p>
-			<p>Take to the tracks in this high-speed action platformer, looting 
-			a moving train in an attempt to pull off the biggest heist the Wild 
-			West has ever seen!</p>
-		  </div>
-		  <div class ="col-md-1"></div>
-	    </div>
-		
-		<div class ="row">
-		  <div class ="col-md-1"></div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
-				<p>Project HYPETRAIN is a game currently being developed by 
-				the student startup studio I founded, Ursa Major Games. Whenever
-				we get a break from school, jobs, and the general craziness
-				of college, we pour our hearts into this game. Project HYPETRAIN
-				has the biggest team, as well as development cycle, I have ever
-				experienced. The result? A ton of leadership, design, and Unity 
-				experience, along with a badass train heist game that'll be sure
-				to get the HYPE flowing through your veins! Try it out!</p>
-		  </div>
-		  <div class ="col-md-3">
-			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
-            </div>
-	      </div>
-		  <div class ="col-md-1"></div>
-	    </div>
-		
-		<div class ="row" id="checkbuttons">
-	      <div class ="col-md-12 text-center">
-			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
-			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
-	      </div>
-	    </div>
-		
-	   </div>
-      </div>
-    </div>
-	
-	<div class = "neighborhood-guides">
-        <div class="container">
-            <div class ="row">
-				<div class ="col-md-12 text-center" id="title"><img src="images/meow_title.png"></div>
-        <div class ="row">
-		  <div class ="col-md-1"></div>
-	      <div class ="col-md-5">
-			<div class="thumbnail" style="padding-top:20px">
-                <img src="images/meow_screen.png">
-            </div>
-	      </div>
-		  <div class ="col-md-5" id="gametext" style="padding-top:30px">
-			<p>Role: Lead Designer/Writer</p>
-			<p>Developed In: Unity (C#)</p>
-			<p>Two lovestruck cats are about to enter a long-distance
-			relationship, and the pesky phone bills aren't cheap. Earn
-			money through a series of odd jobs to try and make things 
-			work in this heart-wrenching short story-game.</p>
-		  </div>
-		  <div class ="col-md-1"></div>
-	    </div>
-		
-		<div class ="row">
-		  <div class ="col-md-1"></div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:70px">
-				<p>What Do We Do Meow was developed at the 2015 Global
-				Game Jam. It was the first jam for all 5 of us, but I'm pretty
-				proud of what we came up with in a meager 48 hours. I learned
-		        a ton and had a blast, and will definitely be attending many
-				more jams in the future!</p>
-		  </div>
-		  <div class ="col-md-3">
-			<div class="thumbnail">
-                <a href="http://globalgamejam.org/2015/games/what-do-we-do-meow-1"><img src="images/GGJ_logo.png"></a>
-            </div>
-	      </div>
-		  <div class ="col-md-1"></div>
-	    </div>
-		
-		<div class ="row" id="checkbuttons">
-	      <div class ="col-md-12 text-center">
-			<a href="downloads/wdwd-meow(Win).zip" class="btn btn-custom">Download (Windows)</a>
-			<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>
-	      </div>
 	    </div>
 		
 	   </div>
