--- a/krabklashers.html
+++ b/krabklashers.html
@@ -24,11 +24,11 @@
               <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
+				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				<li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
+				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
-				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
-				    <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
-                <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
-		        </ul>
+		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
@@ -60,7 +60,7 @@
 		<div class ="row">
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-4">
-			<div class="thumbnail">
+			<div class="thumbnail" style="padding-top:30px">
                 <img src="images/krab_model.png">
             </div>
 	      </div>
