--- a/krabklashers.html
+++ b/krabklashers.html
@@ -33,6 +33,7 @@
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
 		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
+		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png"></a></li>
         </ul>
       </div>
     </div>
@@ -47,9 +48,10 @@
 			<p>Role: Level Designer/Scrum Master</p>
 			<p>Tools: <img src="images/Unity_Logo.png"><img src="images/Blender_Logo.png"></p>
 			<p>Klash with your friends in this 3D combat arena and compete
-			for the title of "Top Krab"! </p>
+			for the title of "Top Krab"! Easy to pick up, but once you 
+			get going it's hard to keep your claws off!</p>
 		  </div>
-		  <div class ="col-md-4">
+		  <div class ="col-md-4" style="padding-top:30px">
 			<div class="thumbnail">
                 <img src="images/krab_screen.png">
             </div>
