--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -33,6 +33,7 @@
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
 		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
+		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png"></a></li>
         </ul>
       </div>
     </div>
@@ -67,8 +68,8 @@
             </div>
 	      </div>
 		  <div class ="col-md-7" id="gametext" style="padding-top:50px">
-				<p>What Do We Do Meow was developed at the 2015 Global
-				Game Jam. It was the first jam for all 5 of us, but I'm pretty
+				<p>What Do We Do Meow was developed at the <a href="http://globalgamejam.org/2015/games/what-do-we-do-meow-1">2015 Global
+				Game Jam</a>. It was the first jam for all 5 of us, but I'm
 				proud of what we came up with in a meager 48 hours. I learned
 		        a lot about the importance of planning/storyboarding, as well
 				as how to effectively create under pressue. It was an 
