--- a/hypetrain.html
+++ b/hypetrain.html
@@ -33,6 +33,7 @@
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
 		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
+		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png"></a></li>
         </ul>
       </div>
     </div>
