--- a/core/index.html
+++ b/core/index.html
@@ -13,7 +13,8 @@
 <div class="introduction">
 	<h1><span>Core Decisions</span></h1>
 	<h2><span>Sean Mendenhall and Hayden Platt</span></h2>
-	<div class="bibliography"><span>Release 1</span></div>
+	<div class="bibliography"><span>Release 2</span></div>
+   <p><a href="walkthrough.txt">Walkthrough</a></p>
 </div>
 <div class="links">
 	<ul>
