--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		  <li class="dropdown">
               <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
+				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				    <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
+                <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
-				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
-				<li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
-				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 		      </ul>
 		  </li>
@@ -45,6 +45,8 @@
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
   </ol>
  
   <!-- Wrapper for slides -->
@@ -53,6 +55,12 @@
       <a href="http://haydenplatt.me/hypetrain"><img src="images/hypetrain_screen.png" alt="..."></a>
       <div class="carousel-caption">
           <h3>Project HYPETRAIN</h3>
+      </div>
+    </div>
+    <div class="item">
+	  <a href="http://haydenplatt.me/krabklashers"><img src="images/krab_screen.png" alt="..."></a>
+      <div class="carousel-caption">
+          <h3>KrabKlashers</h3>
       </div>
     </div>
     <div class="item">
@@ -65,6 +73,12 @@
 	  <a href="http://haydenplatt.me/dreamlock"><img src="images/dreamlock_screen.png" alt="..."></a>
       <div class="carousel-caption">
           <h3>Dreamlock</h3>
+      </div>
+    </div>
+    <div class="item">
+	  <a href="http://haydenplatt.me/wdwd-meow"><img src="images/meow_screen.png" alt="..."></a>
+      <div class="carousel-caption">
+          <h3>What Do We Do Meow?</h3>
       </div>
     </div>
   </div>
