Added contact prototype

--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,7 @@
                 <img id="me" src="images/me_small.png">
             </div>
 	      </div>
-		  <div class ="col-md-7">
+		  <div class ="col-md-7" style="padding-top:18px">
 			<h3>A Game Designer</h3>
 				<p style="font-size: 18px">Games for me create experiences and emotions 
 				unlike any other medium. This passion paired with 
@@ -65,7 +65,7 @@
 		
 		<div class ="row">
 		  <div class ="col-md-1"></div>
-		  <div class ="col-md-7">
+		  <div class ="col-md-7" style="padding-top:10px">
 			<h3>A Leader</h3>
 				<p style="font-size: 18px">I've been naturally drawn to leadership
 				for as long as I can remember. Over the years
@@ -92,7 +92,7 @@
                 <img id="me" src="images/work_sesh.jpg">
             </div>
 	      </div>
-		  <div class ="col-md-7">
+		  <div class ="col-md-7" style="padding-top:15px">
 			<h3>A Student</h3>
 				<p style="font-size: 18px">While true that I'm
 				a student at UC Santa Cruz, that's not
@@ -123,7 +123,7 @@
 	
 	
 	<div class ="col-md-12 text-center">
-		<p id="footer">© Hayden Platt</p>
+		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#7e27d5">Contact Me!</a></p>
 	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
