--- a/dreamlock.html
+++ b/dreamlock.html
@@ -94,7 +94,7 @@
     </div>
 	
 	<div class ="col-md-12 text-center">
-		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#7e27d5">Contact Me!</a></p>
+		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#673AB7">Contact Me!</a></p>
 	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
