--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 		      </ul>
 		  </li>
-		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
-		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
-		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
-		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png"></a></li>
+		  <!-- <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li> -->
+        <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png" onmouseover="this.src='images/twitter_hover.png'" onmouseout="this.src='images/twitter_logo.png'"></a></li>
+		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png" onmouseover="this.src='images/linkedin_hover.png'" onmouseout="this.src='images/linkedin_logo.png'"></a></li>
+		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png" onmouseover="this.src='images/github_hover.png'" onmouseout="this.src='images/github_logo.png'"></a></li>
+		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png" onmouseover="this.src='images/resume_hover.png'" onmouseout="this.src='images/resume_logo.png'"></a></li>
         </ul>
 		
       </div>
@@ -95,7 +96,7 @@
 	<div class="main-text hidden-xs">
         <div class="col-md-12 text-left">
             <h1>Hayden Platt</h1>
-             <h3>3rd Year Game Design Student at UC Santa Cruz</h3>
+             <h3>4th Year Game Design Student at UC Santa Cruz</h3>
         </div>
     </div>
     
@@ -125,7 +126,7 @@
     </div>
 	
 	<div class ="col-md-12 text-center">
-		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#7e27d5">Contact Me!</a></p>
+		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#673AB7">Contact Me!</a></p>
 	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
