Trying to implement dropdown divider...

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
 				    <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
                 <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
+                <li class="divider"></li>
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 		      </ul>
