--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -79,12 +79,13 @@
 		  <div class ="col-md-1"></div>
 	    </div>
 		
-		<iframe src="//itch.io/embed/39925" width="552" height="167" frameborder="0"></iframe>
 		
+
 		<div class ="row" id="checkbuttons">
 	      <div class ="col-md-12 text-center">
-			<a href="downloads/wdwd-meow(Win).zip" class="btn btn-custom">Download (Windows)</a>
-			<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>
+	      	<iframe src="//itch.io/embed/39925" width="552" height="167" frameborder="0"></iframe>
+			<!--<a href="downloads/wdwd-meow(Win).zip" class="btn btn-custom">Download (Windows)</a>
+			<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>-->
 	      </div>
 	    </div>
 		
