--- a/incognitowl.html
+++ b/incognitowl.html
@@ -30,10 +30,10 @@
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 		      </ul>
 		  </li>
-		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
-		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
-		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
-		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png"></a></li>
+		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png" onmouseover="this.src='images/twitter_hover.png'" onmouseout="this.src='images/twitter_logo.png'"></a></li>
+		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png" onmouseover="this.src='images/linkedin_hover.png'" onmouseout="this.src='images/linkedin_logo.png'"></a></li>
+		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png" onmouseover="this.src='images/github_hover.png'" onmouseout="this.src='images/github_logo.png'"></a></li>
+		  <li id="social"><a href="downloads/Hayden_Platt_Resume.pdf"><img src="images/resume_logo.png" onmouseover="this.src='images/resume_hover.png'" onmouseout="this.src='images/resume_logo.png'"></a></li>
         </ul>
       </div>
     </div>
