--- a/portfolio.html
+++ b/portfolio.html
@@ -303,7 +303,13 @@
     </div>
 	
 	<div class ="col-md-12 text-center">
-		<p id="footer">© Hayden Platt </br> <a href="http://haydenplatt.me" style="color:#673AB7">Contact Me!</a></p>
+		<p id="footer">© Hayden Platt </br>
+		<script>
+			function changeText(){
+ 				document.getElementById('contact').innerHTML = 'misterplatt17@gmail.com';
+			}
+		</script>
+		<a id='contact' onclick='changeText()' style="color:#673AB7">Contact Me!</a></p>
 	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
