--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
 <!--[if IEMobile]>  <meta http-equiv="cleartype" content="on">  <![endif]-->
 
 <!-- Bootstrap -->
-<link href="_include/css/bootstrap.min.css" rel="stylesheet">
+<link href="_include/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
 <!-- Main Style -->
-<link href="_include/css/main.css" rel="stylesheet">
+<link href="_include/css/main.css" rel="stylesheet" type="text/css">
 
 <!-- Supersized -->
-<link href="_include/css/supersized.css" rel="stylesheet">
-<link href="_include/css/supersized.shutter.css" rel="stylesheet">
+<link href="_include/css/supersized.css" rel="stylesheet" type="text/css">
+<link href="_include/css/supersized.shutter.css" rel="stylesheet" type="text/css">
 
 <!-- FancyBox -->
-<link href="_include/css/fancybox/jquery.fancybox.css" rel="stylesheet">
+<link href="_include/css/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css">
 
 <!-- Font Icons -->
-<link href="_include/css/fonts.css" rel="stylesheet">
+<link href="_include/css/fonts.css" rel="stylesheet" type="text/css">
 
 <!-- Shortcodes -->
-<link href="_include/css/shortcodes.css" rel="stylesheet">
+<link href="_include/css/shortcodes.css" rel="stylesheet" type="text/css">
 
 <!-- Responsive -->
-<link href="_include/css/bootstrap-responsive.min.css" rel="stylesheet">
-<link href="_include/css/responsive.css" rel="stylesheet">
+<link href="_include/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+<link href="_include/css/responsive.css" rel="stylesheet" type="text/css">
 
 <!-- Supersized -->
-<link href="_include/css/supersized.css" rel="stylesheet">
-<link href="_include/css/supersized.shutter.css" rel="stylesheet">
+<link href="_include/css/supersized.css" rel="stylesheet" type="text/css">
+<link href="_include/css/supersized.shutter.css" rel="stylesheet type="text/css"">
 
 <!-- Google Font -->
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900' rel='stylesheet' type='text/css'>
