Updated link color, tinkering with media fancybox

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 	<textarea id="contact_message" placeholder="Your Message" name="message" rows="15" cols="40"></textarea>
                 </p>
                 <p class="contact-submit">
-                	<a id="contact-submit" class="submit" href="#">Send Your Email</a>
+                	<a id="contact-submit" class="submit" href="#">SEND YOUR EMAIL</a>
                 </p>
                 
                 <div id="response">
