--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							<!-- Item Project and Filter Name -->
                         	<li class="item-thumbs span3 level programmer">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                            	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="Dreamlock" href="https://www.youtube.com/watch?v=qoSwJPaEU4g">
+                            	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="Dreamlock" href="#">
                                 	<span class="overlay-img"></span>
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
