--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 							<!-- Item Project and Filter Name -->
                         	<li class="item-thumbs span3 gameplay level programmer">
                             	<!-- Fancybox Media - Gallery Enabled - Title - Link to Video -->
-                            	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="IncognitOwl" href="#">
+                            	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="IncognitOwl" href="https://www.youtube.com/watch?v=LPURaqmMQsQ">
                                 	<span class="overlay-img"></span>
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
