Fixed IncognitOwl browser page

--- a/incognitowl_game/browser.html
+++ b/incognitowl_game/browser.html
@@ -8,15 +8,15 @@
 	
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../include/css/bootstrap.css">
+    <link rel="stylesheet" href="../include/css/incognitowl.css">
     
   </head>
 	
 <body onload="checkCookie()" id="browser">
 	
-    <img id="owl" src="../images/jax.png">
-    <img id="bat" src="../images/bat.png">
+    <img id="owl" src="../include/img/work/thumbs/jax.png">
+    <img id="bat" src="../include/img/work/thumbs/bat.png">
 	
     <canvas id='canvas' width="840" height="630"></canvas>
     <script src="brine.js"></script>
