--- a/index.html
+++ b/index.html
@@ -245,6 +245,18 @@
 							<!-- Item Project and Filter Name -->
                         	<li class="item-thumbs span3 other">
                             	<!-- Fancybox Media - Gallery Enabled - Title - Link to Video -->
+                            	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Core Decisions" href="include/img/work/full/image-08-full.jpg">
+                                	<span class="overlay-img"></span>
+									<span class="overlay-img-thumb font-icon-plus"></span>
+                                </a>
+                                <!-- Thumb Image and Description -->
+                                <img src="include/img/work/thumbs/image08.png" dlink="http://haydenplatt.me/core_decisions/core-decisions" alt="An interactive fiction made in Inform 7. As an engineer onboard a spacecraft with only 60 minutes to destruction, will you take the easy way out or risk it all?">
+                            </li>
+                        	<!-- End Item Project -->
+							
+							<!-- Item Project and Filter Name -->
+                        	<li class="item-thumbs span3 other">
+                            	<!-- Fancybox Media - Gallery Enabled - Title - Link to Video -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="3D Model: Bojack Horseman's House" href="include/img/work/full/image-05-full.png">
                                 	<span class="overlay-img"></span>
 									<span class="overlay-img-thumb font-icon-plus"></span>
