--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">CTO/Founder</span>
                 </div>-->
-                <img src="include/img/about/me_small.png" alt="John Doe">
+                <img src="include/img/about/designer.jpg" alt="John Doe">
             </div>
             <h3 class="profile-name">A Game Designer</h3>
             <p class="profile-description">Games for me create experiences and emotions unlike any other medium. This passion paired with my love for computers has led me to a career in video game design. 
@@ -348,7 +348,7 @@
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">Lead Designer</span>
                 </div>-->
-                <img src="include/img/about/work_sesh.jpg" alt="Joshua Insanus">
+                <img src="include/img/about/me_small.png" alt="Joshua Insanus">
             </div>
             <h3 class="profile-name">A Student</h3>
             <p class="profile-description">While true that I'm a student at UC Santa Cruz, that's not the only place I do my learning. When I play games, I'm learning. When I lead projects, I'm learning. 
