Finalized about me update

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">CTO/Founder</span>
                 </div>-->
-                <img src="include/img/about/designer.jpg" alt="John Doe">
+                <img src="include/img/about/designer.png" alt="John Doe">
             </div>
             <h3 class="profile-name">A Game Designer</h3>
             <p class="profile-description">Games for me create experiences and emotions unlike any other medium. This passion paired with my love for computers has led me to a career in video game design. 
