Changed font to Righteous, testing dynamic title font size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <title>Hayden Platt - Game Designer</title>   
 <link rel="icon" type="image/vnd.microsoft.icon" href="include/img/favicon.ico" />
 
-<meta name="description" content="Insert Your Site Description" /> 
+<meta name="description" content="Portfolio of Hayden Platt's game project contributions" /> 
+<meta name="viewport" content="width=device-width" />
 
 <!-- Mobile Specifics -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
