Shrunk Shackle and Core Decisions images to better fit page, added Shackle itch link

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="include/img/work/thumbs/image06.png" dlink="http://shackle-game.com" alt="In Shackle, 2 players sit back to back with an Oculus Rift on, both only able to see one half of a haunted room. Communication and cooperation is key, but be careful not to wake what lurks beyond the walls..." >
+                                <img src="include/img/work/thumbs/image06.png" itch-shackle="true" alt="In Shackle, 2 players sit back to back with an Oculus Rift on, both only able to see one half of a haunted room. Communication and cooperation is key, but be careful not to wake what lurks beyond the walls..." >
                             </li>
                         	<!-- End Item Project -->
                             
