--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <meta name="description" content="Portfolio of Hayden Platt's game project contributions" /> 
 <meta name="viewport" content="width=device-width" />
 
+<!-- LinkedIn Image -->
+<meta property="og:image" content="include/img/linkedin.png" />
+
 <!-- Mobile Specifics -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="HandheldFriendly" content="true"/>
