Updated Email link and resume

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		
 		<!-- Resume Link -->
 		<div class="span4" style="text-align:center">
-            <a class="button" href="include/downloads/Hayden_Platt_Resume.pdf">View Resume</a>
+            <a class="button" href="include/downloads/Hayden_Platt_Resume.pdf" target="_blank">View Resume</a>
         </div>
         
     </div>
@@ -382,12 +382,12 @@
         	<div class="contact-details">
         		<h3>Contact Details</h3>
                 <ul>
-                    <li><a href="mailto:misterplatt17@gmail.com">misterplatt17@gmail.com</a></li>
+                    <li><a href="mailto:misterplatt17@gmail.com">haydengplatt@gmail.com</a></li>
                     <li>(916) 698-1083</li>
 					<li><a href="http://twitter.com/hayden_platt"><img src="include/img/social/twitter_hover.png" onmouseover="this.src='include/img/social/twitter_logo.png'" onmouseout="this.src='include/img/social/twitter_hover.png'"></a></li>
 					<li><a href="http://linkedin.com/in/haydenplatt"><img src="include/img/social/linkedin_hover.png" onmouseover="this.src='include/img/social/linkedin_logo.png'" onmouseout="this.src='include/img/social/linkedin_hover.png'"></a></li>
 					<li><a href="http://github.com/misterplatt"><img src="include/img/social/github_hover.png" onmouseover="this.src='include/img/social/github_logo.png'" onmouseout="this.src='include/img/social/github_hover.png'"></a></li>
-					<li><a href="downloads/Hayden_Platt_Resume.pdf"><img src="include/img/social/resume_hover.png" onmouseover="this.src='include/img/social/resume_logo.png'" onmouseout="this.src='include/img/social/resume_hover.png'"></a></li>
+					<li><a href="include/downloads/Hayden_Platt_Resume.pdf" target="_blank"><img src="include/img/social/resume_hover.png" onmouseover="this.src='include/img/social/resume_logo.png'" onmouseout="this.src='include/img/social/resume_hover.png'"></a></li>
                 </ul>
             </div>
         </div>
