Changed button colors to purple, added Oculus logo to Shackle thumbnail, added icons to role filters

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                     <ul id="filters" class="option-set" data-option-key="filter">
                     	<li class="type-work">Project Role</li>
                         <li><a href="#filter" data-option-value="*" class="selected">All Projects</a></li>
-                        <li><a href="#filter" data-option-value=".level">Level Designer</a></li>
-                        <li><a href="#filter" data-option-value=".gameplay">Gameplay Designer</a></li>
-                        <li><a href="#filter" data-option-value=".lead">Project Lead</a></li>
-						<li><a href="#filter" data-option-value=".programmer">Gameplay Programmer</a></li>
-						<li><a href="#filter" data-option-value=".other">Other Works</a></li>
+                        <li><a href="#filter" data-option-value=".level"><i class="fa fa-gavel"></i> Level Designer</a></li>
+                        <li><a href="#filter" data-option-value=".gameplay"><i class="fa fa-lightbulb-o"></i>&nbsp;&nbsp;Gameplay Designer</a></li>
+                        <li><a href="#filter" data-option-value=".lead"><i class="fa fa-users"></i> Project Lead</a></li>
+						<li><a href="#filter" data-option-value=".programmer"><i class="fa fa-gamepad"></i> Gameplay Programmer</a></li>
+						<li><a href="#filter" data-option-value=".other"><i class="fa fa-suitcase"></i> Other Works</a></li>
                     </ul>
                 </nav>
                 <!-- End Filter -->
