Updated hardcoded URLS for Core Decisions and IncognitOwl

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="include/img/work/thumbs/image04.png" dlink="http://haydenplatt.me/incognitowl_game/browser" alt="Jax Tallon, the Hoot Corps' first IncognitOwl, embarks on a mission to use reconnaissance rather than violence to solve the dispute between Owls and Bats. Set up traps and plan missions by day, then execute infiltrations by night. Learn to utilize both the day's point and click tower-defense style mechanics and the night's arrow-key sneaking controls to become the world's first IncognitOwl!">
+                                <img src="include/img/work/thumbs/image04.png" dlink="http://purpleplattypus.com/incognitowl_game/browser" alt="Jax Tallon, the Hoot Corps' first IncognitOwl, embarks on a mission to use reconnaissance rather than violence to solve the dispute between Owls and Bats. Set up traps and plan missions by day, then execute infiltrations by night. Learn to utilize both the day's point and click tower-defense style mechanics and the night's arrow-key sneaking controls to become the world's first IncognitOwl!">
                             </li>
                         	<!-- End Item Project -->
                             
@@ -247,7 +247,7 @@
 									<span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="include/img/work/thumbs/image08.png" dlink="http://haydenplatt.me/core_decisions/core-decisions" alt="An interactive fiction made in Inform 7. As an engineer onboard a spacecraft with only 60 minutes to destruction, will you take the easy way out or risk it all?">
+                                <img src="include/img/work/thumbs/image08.png" dlink="http://purpleplattypus.com/core_decisions/core-decisions" alt="An interactive fiction made in Inform 7. As an engineer onboard a spacecraft with only 60 minutes to destruction, will you take the easy way out or risk it all?">
                             </li>
                         	<!-- End Item Project -->
 							
