Updated podcast blurb, attempting to fix Shackle's itch widget not showing

--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                 <img src="include/img/about/splatt_prof.png">
             </div>
             <h3 class="profile-name">A Podcaster</h3>
-            <p class="profile-description">While true that I'm a student at UC Santa Cruz, that's not the only place I do my learning. When I play games, I'm learning. When I lead projects, I'm learning. 
-			I've come to realize that I'll never know everything about games, but that's also what makes creating them so great. My title may change, but I'll always be a student with more to learn.</p>
+            <p class="profile-description">When I'm not making or playing games, there's a good chance I'm talking about them. Since my old friend Sam Fields and I have babbled over games together for ages, we finally decided to start recording our ramblings!
+			Our podcast, The Splatt Show!, is available on Youtube, Google Play, and iTunes. If you decide to give it a listen please let us know what you think!</p>
         </div>
         <!-- End Profile -->
  
