Updated 'Play Now' description

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="span12">
                 <div class="title-page">
                     <h2 class="title">Play Now</h2>
-                    <h3 class="title-description">My works, both in and out of the classroom.</h3>
+                    <h3 class="title-description">My works, both in and out of the office!</h3>
                 </div>
             </div>
         </div>
