Switch links to HTTPS, cleanout unused files, attempt .html removal

--- a/incognitowl.html
+++ b/incognitowl.html
@@ -88,7 +88,7 @@
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
 					</div>
-					<div align="center" class="blog_info"><a target="_blank" href="http://purpleplattypus.com/incognitowl_game/browser" class="primary-btn">Play In Browser</a></div>
+					<div align="center" class="blog_info"><a target="_blank" href="https://purpleplattypus.com/incognitowl_game/browser" class="primary-btn">Play In Browser</a></div>
 				</div>
 				<div class="col-lg-6 col-md-12 about-right mobile_gap">
 					<p>
@@ -265,15 +265,15 @@
 							<h4>More Places to Find Me</h4>
 						</div>
 						<ul class="list">
-							<li><a href="http://twitter.com/purpl_plattypus" target="_blank"><img
+							<li><a href="https://twitter.com/purpl_plattypus" target="_blank"><img
 										src="img/social/twitter_hover.png"
 										onmouseover="this.src='img/social/twitter_logo.png'"
 										onmouseout="this.src='img/social/twitter_hover.png'"></a></li>
-							<li><a href="http://linkedin.com/in/haydenplatt" target="_blank"><img
+							<li><a href="https://linkedin.com/in/haydenplatt" target="_blank"><img
 										src="img/social/linkedin_hover.png"
 										onmouseover="this.src='img/social/linkedin_logo.png'"
 										onmouseout="this.src='img/social/linkedin_hover.png'"></a></li>
-							<li><a href="http://github.com/misterplatt" target="_blank"><img
+							<li><a href="https://github.com/misterplatt" target="_blank"><img
 										src="img/social/github_hover.png"
 										onmouseover="this.src='img/social/github_logo.png'"
 										onmouseout="this.src='img/social/github_hover.png'"></a></li>
