--- a/krabklashers.html
+++ b/krabklashers.html
@@ -268,15 +268,15 @@
 							<h4>More Places to Find Me</h4>
 						</div>
 						<ul class="list">
-							<li><a href="http://twitter.com/purpl_plattypus" target="_blank"><img
+							<li><a href="https://twitter.com/purpl_plattypus" target="_blank"><img
 										src="img/social/twitter_hover.png"
 										onmouseover="this.src='img/social/twitter_logo.png'"
 										onmouseout="this.src='img/social/twitter_hover.png'"></a></li>
-							<li><a href="http://linkedin.com/in/haydenplatt" target="_blank"><img
+							<li><a href="https://linkedin.com/in/haydenplatt" target="_blank"><img
 										src="img/social/linkedin_hover.png"
 										onmouseover="this.src='img/social/linkedin_logo.png'"
 										onmouseout="this.src='img/social/linkedin_hover.png'"></a></li>
-							<li><a href="http://github.com/misterplatt" target="_blank"><img
+							<li><a href="https://github.com/misterplatt" target="_blank"><img
 										src="img/social/github_hover.png"
 										onmouseover="this.src='img/social/github_logo.png'"
 										onmouseout="this.src='img/social/github_hover.png'"></a></li>
