--- a/core-decisions.html
+++ b/core-decisions.html
@@ -83,7 +83,7 @@
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
 					<img class="banner_logo" src="img/works/core-decisions-gif.gif" alt="">
-					<div align="center" class="blog_info"><a target="_blank" href="http://purpleplattypus.com/core_decisions/core-decisions" class="primary-btn">Play In Browser</a></div>
+					<div align="center" class="blog_info"><a target="_blank" href="https://purpleplattypus.com/core_decisions/core-decisions" class="primary-btn">Play In Browser</a></div>
 				</div>
 				<div class="col-lg-6 col-md-12 about-right section_gap">
 					<p>
@@ -260,15 +260,15 @@
 							<h4>More Places to Find Me</h4>
 						</div>
 						<ul class="list">
-							<li><a href="http://twitter.com/purpl_plattypus" target="_blank"><img
+							<li><a href="https://twitter.com/purpl_plattypus" target="_blank"><img
 										src="img/social/twitter_hover.png"
 										onmouseover="this.src='img/social/twitter_logo.png'"
 										onmouseout="this.src='img/social/twitter_hover.png'"></a></li>
-							<li><a href="http://linkedin.com/in/haydenplatt" target="_blank"><img
+							<li><a href="https://linkedin.com/in/haydenplatt" target="_blank"><img
 										src="img/social/linkedin_hover.png"
 										onmouseover="this.src='img/social/linkedin_logo.png'"
 										onmouseout="this.src='img/social/linkedin_hover.png'"></a></li>
-							<li><a href="http://github.com/misterplatt" target="_blank"><img
+							<li><a href="https://github.com/misterplatt" target="_blank"><img
 										src="img/social/github_hover.png"
 										onmouseover="this.src='img/social/github_logo.png'"
 										onmouseout="this.src='img/social/github_hover.png'"></a></li>
