Testing a page w/o .html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<li class="nav-item"><a class="nav-link" href="wdwd-meow.html">What Do We Do Meow?</a></li>
 									<li class="nav-item"><a class="nav-link" href="incognitowl.html">IncognitOwl</a></li>
 									<li class="nav-item"><a class="nav-link" href="dreamlock.html">Dreamlock</a></li>
-									<li class="nav-item"><a class="nav-link" href="core-decisions.html">Core Decisions</a></li>
+									<li class="nav-item"><a class="nav-link" href="core-decisions">Core Decisions</a></li>
 								</ul>
 							</li>
 							<li class="nav-item"><a class="nav-link" id="nextsection" href="#about">About</a></li>
